Updated pest index pages to new layout

--- a/bed-bugs.html
+++ b/bed-bugs.html
@@ -99,7 +99,7 @@
             <img class="img-fluid" src="http://placehold.it/750x500" alt="">
         </div>
 
-        <div class="col-md-4 bg-second">
+        <div class="col-md-4">
             <h3 class="my-3">Pest Description</h3>
             <p>Bed bugs are parasitic insects that feed upon the blood of their hosts.
                 Preferring the confined habitats inside beds and other furniture, remain mostly unseen during the day
@@ -107,13 +107,35 @@
                 bed bugs can be unknowingly picked up from many public places such as theaters and hotels to be
                 brought back to homes where they nest in furniture and go on to multiply to a point where they are difficult to deal with.
                 Bed bug bites cause severe health effects such as rashes, allergic reactions, and physiological ailments.</p>
-            <h3 class="my-3">Project Details</h3>
-            <ul>
-                <li>Lorem Ipsum</li>
-                <li>Dolor Sit Amet</li>
-                <li>Consectetur</li>
-                <li>Adipiscing Elit</li>
-            </ul>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Color: Light brown (rust red after feeding).</li>
+                    <li>Size: 3/16" to 1/4", flat and in shape.</li>
+                    <li>Unique: Antennae have 12 segments.</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">SIGNS OF AN INFESTATION</h3>
+                <ul>
+                    <li>Blood stains on sheets or pillowcases.</li>
+                    <li>Rusty or dark color spots of bed bug droppings on sheets, clothes, bed, and walls.</li>
+                    <li>Bed bug egg shells, droppings, or shedding skins in hiding spots.</li>
+                    <li>A strong, musty odor.</li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
         </div>
 
     </div>
