--- a/fleas.html
+++ b/fleas.html
@@ -106,20 +106,36 @@
                 In urban areas, pets unknowingly acquire fleas from grass in front yards and backyards, after which they multiply at rates of 18 eggs per female daily.
                 This goes on to 360 eggs daily for a group of 20 fleas, each of which can live up to 3 months.
                 Once these pests have found their way onto a pet, they can then find their way onto the pet's owner by using their powerful legs to jump as high as 16 inches. </p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>Small, quick black dots in hair</li>
-                <li>Frequent itching and irritation</li>
-                <li>1/6 in. length</li>
-            </ul>
-            <h3 class="my-3">Diseases</h3>
-            <ul>
-                <li>Bubonic Plague</li>
-                <li>Typhus</li>
-                <li>Tungiansis</li>
-                <li>Tularemia</li>
-                <li>Allergic reaction</li>
-            </ul>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Small, quick black dots in hair</li>
+                    <li>Frequent itching and irritation</li>
+                    <li>1/6 in. length</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">DISEASES</h3>
+                <ul>
+                    <li>Bubonic Plague</li>
+                    <li>Typhus</li>
+                    <li>Tungiansis</li>
+                    <li>Tularemia</li>
+                    <li>Allergic reaction</li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
         </div>
 
     </div>
