--- a/hornets.html
+++ b/hornets.html
@@ -104,44 +104,64 @@
             <p>Hornets form exposed nests in trees, shrubs, underground, on buildings, and in cavities using wood chewed into a paper-like pulp.
                 Their nests typically house 100 to 700 workers and 2 to 6 queens in larger nests. They guard their nests aggressively,
                 with their stings being more dangerous than that of bees.</p>
-            <h3 class="my-3">Bee Preservation</h3>
-            <p>Here at Calvert Exterminators, we recognize the important role that bees serve in Maryland's ecosystem and make it a priority to
-            investigate and remove any hornet nests that pose a threat to bees. If our technicians identify a "wasp nest" as a beehive, we have contacts
-            that can safely remove the hive and relocate the bees. This is an effort to preserve Earth's declining bee populations and their crucial role
-            in pollinating Earth's plants.</p>
-            <h3 class="my-3">Murder Hornets</h3>
-            <p>Asian Giant Hornets (a.k.a "Murder Hornets") began to sighted in the United States, with word of their huge size and extremely painful sting
-                spreading across the internet. In reality, Murder Hornets are very unlikely to be found in Maryland, with few sightings in the state of
-                Washington. There is still a very real threat in Maryland, though: European Hornets. These large hornets feed not only on Maryland honeybees,
-                but also other pollinators such as butterflies and yellow jackets. They are easily spotted by their stripping of bark from nearby trees and shrubs.
-                If you suspect you have European Hornets, stay away from the nest and let us do the rest!</p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>Look like white ants with a head and cigar-shaped body</li>
-                <li>Two sets of wings of equal length</li>
-                <li>Prefer damp, humid areas</li>
-                <li>Infestations begin during the spring</li>
-            </ul>
-            <!--h3 class="my-3">Diseases</h3>
-            <ul>
-                <li>West Nile Virus</li>
-                <li>Zika Virus</li>
-                <li>Malaria</li>
-                <li>Chikungunya Virus</li>
-                <li>Dengue Virus</li>
-                <li>Eastern Equine Encephalitis Virus</li>
-                <li>Japanese Encephalitis Virus</li>
-                <li>La Crosse Encephalitis</li>
-                <li>St. Louis Encephalitis</li>
-                <li>Yellow Fever</li>
-            </ul-->
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">Bee Preservation</h3>
+                <p>Here at Calvert Exterminators, we recognize the important role that bees serve in Maryland's ecosystem and make it a priority to
+                    investigate and remove any hornet nests that pose a threat to bees. If our technicians identify a "wasp nest" as a beehive, we have contacts
+                    that can safely remove the hive and relocate the bees. This is an effort to preserve Earth's declining bee populations and their crucial role
+                    in pollinating Earth's plants.</p>
+            </div>
+            <div class="col">
+                <h3 class="my-3">Murder Hornets</h3>
+                <p>Asian Giant Hornets (a.k.a "Murder Hornets") began to sighted in the United States, with word of their huge size and extremely painful sting
+                    spreading across the internet. In reality, Murder Hornets are very unlikely to be found in Maryland, with few sightings in the state of
+                    Washington. There is still a very real threat in Maryland, though: European Hornets. These large hornets feed not only on Maryland honeybees,
+                    but also other pollinators such as butterflies and yellow jackets. They are easily spotted by their stripping of bark from nearby trees and shrubs.
+                    If you suspect you have European Hornets, stay away from the nest and let us do the rest!</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Look like white ants with a head and cigar-shaped body</li>
+                    <li>Two sets of wings of equal length</li>
+                    <li>Prefer damp, humid areas</li>
+                    <li>Infestations begin during the spring</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">DISEASES</h3>
+                <ul>
+                    <li>Hantavirus Pulmonary Syndrome (HPS)</li>
+                    <li>Rat-bite fever</li>
+                    <li>Bubonic Plague</li>
+                    <li>Septicemic plague</li>
+                    <li>Pneumonic plague</li>
+                    <li>Rabies</li>
+                    <li><a href="https://www.cdc.gov/rodents/diseases/direct.html">More</a></li>
+                </ul>
+            </div>
+
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
         </div>
 
     </div>
     <!-- /.row -->
 
     <!-- Related Projects Row -->
-    <h3 class="my-4">Related Projects</h3>
+    <!--h3 class="my-4">Related Projects</h3>
 
     <div class="row">
 
@@ -169,7 +189,7 @@
             </a>
         </div>
 
-    </div>
+    </div-->
     <!-- /.row -->
 
 </div>
