--- a/mosquitoes.html
+++ b/mosquitoes.html
@@ -107,26 +107,41 @@
                 of transferring deadly diseases, including Malaria and Zika Virus, to humans like sharing a needle.
                 There is a disputed claim that almost half all people who have lived, 53.5 billion,
                 have died of some form of mosquito-spread disease, making them the deadliest animal on Earth.</p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>Small, red, itchy bites on skin</li>
-                <li>0.4 in. length</li>
-            </ul>
-            <h3 class="my-3">Diseases</h3>
-            <ul>
-                <li>West Nile Virus</li>
-                <li>Zika Virus</li>
-                <li>Malaria</li>
-                <li>Chikungunya Virus</li>
-                <li>Dengue Virus</li>
-                <li>Eastern Equine Encephalitis Virus</li>
-                <li>Japanese Encephalitis Virus</li>
-                <li>La Crosse Encephalitis</li>
-                <li>St. Louis Encephalitis</li>
-                <li>Yellow Fever</li>
-            </ul>
         </div>
-
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Small, red, itchy bites on skin</li>
+                    <li>0.4 in. length</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">DISEASES</h3>
+                <ul>
+                    <li>West Nile Virus</li>
+                    <li>Zika Virus</li>
+                    <li>Malaria</li>
+                    <li>Chikungunya Virus</li>
+                    <li>Dengue Virus</li>
+                    <li>Eastern Equine Encephalitis Virus</li>
+                    <li>Japanese Encephalitis Virus</li>
+                    <li>La Crosse Encephalitis</li>
+                    <li>St. Louis Encephalitis</li>
+                    <li>Yellow Fever</li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
+        </div>
     </div>
     <!-- /.row -->
 
