--- a/roaches.html
+++ b/roaches.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Rodents</title>
+    <title>Roaches</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -109,19 +109,35 @@
             <p>The American Cockroach is the largest home invading cockroach in Maryland, invading basements, sewers,
                 and food storage areas. They are active mainly in warmer temperatures, but can also survive in cold temperatures.
                 Once they have invaded a houses' food supply, they will spread disease through direct contact with food and other surfaces.</p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>Brown</li>
-                <li>2 in. size, oval in shape</li>
-            </ul>
-            <h3 class="my-3">Diseases</h3>
-            <ul>
-                <li>Salmonellosis</li>
-                <li>Typhoid Fever</li>
-                <li>Cholera</li>
-                <li>Dysentery</li>
-                <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
-            </ul>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Brown</li>
+                    <li>2 in. size, oval in shape</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">Diseases</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
         </div>
     </div>
 
@@ -143,19 +159,35 @@
             <p>German Cockroaches are mainly found in small cracks close to food and water. Preferring damp and humid
                 residential areas, they will invade the kitchens, pantries, and other food preparation areas of the homes in said
                 residential areas. They are very common in American homes and are responsible for many illnesses spread by the surfaces they touch.</p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>Light brown or tan with two stripes on back</li>
-                <li>1/2 to 5/8 in. size, oval in shape</li>
-            </ul>
-            <h3 class="my-3">Diseases</h3>
-            <ul>
-                <li>Salmonellosis</li>
-                <li>Typhoid Fever</li>
-                <li>Cholera</li>
-                <li>Dysentery</li>
-                <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
-            </ul>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Light brown or tan with two stripes on back</li>
+                    <li>1/2 to 5/8 in. size, oval in shape</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
         </div>
 
     </div>
@@ -177,19 +209,35 @@
             <h3 class="my-3">Pest Description</h3>
             <p>Oriental Cockroaches are mainly found in damp areas with decaying food, such as sewers, basements, firewood piles, and crawl spaces.
             </p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>Dark brown or black</li>
-                <li>1 in. size, long in shape</li>
-            </ul>
-            <h3 class="my-3">Diseases</h3>
-            <ul>
-                <li>Salmonellosis</li>
-                <li>Typhoid Fever</li>
-                <li>Cholera</li>
-                <li>Dysentery</li>
-                <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
-            </ul>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Dark brown or black</li>
+                    <li>1 in. size, long in shape</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
         </div>
 
     </div>
@@ -212,19 +260,35 @@
             <p>Brown-banded Cockroaches fly short distances to reach high spots in the kitchens and bathrooms they are likely to reside in.
                 They prefer warm, dry locations and tend to fly toward the ceiling, unlike most other roaches. They are easily distinguished
                 by the banding along their body and wings along with their tendency to fly.</p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>Black</li>
-                <li>16 in. size, long and oval in shape</li>
-            </ul>
-            <h3 class="my-3">Diseases</h3>
-            <ul>
-                <li>Salmonellosis</li>
-                <li>Typhoid Fever</li>
-                <li>Cholera</li>
-                <li>Dysentery</li>
-                <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
-            </ul>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Black</li>
+                    <li>16 in. size, long and oval in shape</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
         </div>
 
     </div>
