--- a/rodents.html
+++ b/rodents.html
@@ -112,19 +112,35 @@
             <p>House mice are the most common breed of mouse in the United States and can enter homes through holes as small as a dime.
                 Once inside a house, they travel through small cracks, seeking food and leaving droppings that spread germs. House mice carry
                 other pests such as fleas, lice, mites, and ticks.</p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>Light brown</li>
-                <li>2 in. size, round in shape</li>
-            </ul>
-            <h3 class="my-3">Diseases</h3>
-            <ul>
-                <li>Hantavirus Pulmonary Syndrome (HPS)</li>
-                <li>Lymphocytic Choriomeningitis (LCM)</li>
-                <li>Bubonic Plague</li>
-                <li>Tularemia</li>
-                <li><a href="https://www.cdc.gov/rodents/diseases/direct.html">More</a></li>
-            </ul>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Light brown</li>
+                    <li>2 in. size, round in shape</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">DISEASES</h3>
+                <ul>
+                    <li>Hantavirus Pulmonary Syndrome (HPS)</li>
+                    <li>Lymphocytic Choriomeningitis (LCM)</li>
+                    <li>Bubonic Plague</li>
+                    <li>Tularemia</li>
+                    <li><a href="https://www.cdc.gov/rodents/diseases/direct.html">More</a></li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
         </div>
     </div>
 
@@ -145,19 +161,35 @@
             <h3 class="my-3">Pest Description</h3>
             <p>Deer mice typically live outside in hollow logs or debris piles, but will also enter homes and stay in garages, attics, and small crawlspaces.
                 They carry a dangerous disease called Hantavirus Pulmonary Syndrome (HPS), which is spread through their carcasses or by inhaling urine droplets of said carcasses.</p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>Brown with white feet and underbelly</li>
-                <li>5 to 8 in. size, round in shape</li>
-            </ul>
-            <h3 class="my-3">Diseases</h3>
-            <ul>
-                <li>Hantavirus Pulmonary Syndrome (HPS)</li>
-                <li>Lymphocytic Choriomeningitis (LCM)</li>
-                <li>Bubonic Plague</li>
-                <li>Tularemia</li>
-                <li><a href="https://www.cdc.gov/rodents/diseases/direct.html">More</a></li>
-            </ul>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Brown with white feet and underbelly</li>
+                    <li>5 to 8 in. size, round in shape</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">DISEASES</h3>
+                <ul>
+                    <li>Hantavirus Pulmonary Syndrome (HPS)</li>
+                    <li>Lymphocytic Choriomeningitis (LCM)</li>
+                    <li>Bubonic Plague</li>
+                    <li>Tularemia</li>
+                    <li><a href="https://www.cdc.gov/rodents/diseases/direct.html">More</a></li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
         </div>
 
     </div>
@@ -180,19 +212,35 @@
             <p>Norway rats typically live outdoors in woodpiles and fields found in farmland, but have adapted to more urban areas where they seek out sewers and areas with garbage.
                 They enter homes by locating and gnawing or digging at entryways as small as a nickel. Once they have entered a home, they will damage property with their gnawing teeth and
                 spread disease through their droppings as they seek out food.</p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>Dark brown or gray</li>
-                <li>10 to 12 in. size, long in shape</li>
-            </ul>
-            <h3 class="my-3">Diseases</h3>
-            <ul>
-                <li>Hantavirus Pulmonary Syndrome (HPS)</li>
-                <li>Salmonellosis</li>
-                <li>Bubonic Plague</li>
-                <li>Tularemia</li>
-                <li><a href="https://www.cdc.gov/rodents/diseases/direct.html">More</a></li>
-            </ul>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Dark brown or gray</li>
+                    <li>10 to 12 in. size, long in shape</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">DISEASES</h3>
+                <ul>
+                    <li>Hantavirus Pulmonary Syndrome (HPS)</li>
+                    <li>Lymphocytic Choriomeningitis (LCM)</li>
+                    <li>Bubonic Plague</li>
+                    <li>Tularemia</li>
+                    <li><a href="https://www.cdc.gov/rodents/diseases/direct.html">More</a></li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
         </div>
 
     </div>
@@ -216,21 +264,37 @@
                 and will use these heightened senses to seek out any food they can find. They will eat anything they can find and will chew through whatever they can to reach food. Rats are commonly
                 seen as spreaders of disease due to the Bubonic Plague, also known as the Black Death, which killed 25 million people, almost 1/3rd of Europe's population, during the 14th century. Roof
                 rats are the species in question that spread the plague through the ticks on their bodies, and they still spread similar diseases today.</p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>Black</li>
-                <li>16 in. size, long and oval in shape</li>
-            </ul>
-            <h3 class="my-3">Diseases</h3>
-            <ul>
-                <li>Hantavirus Pulmonary Syndrome (HPS)</li>
-                <li>Rat-bite fever</li>
-                <li>Bubonic Plague</li>
-                <li>Septicemic plague</li>
-                <li>Pneumonic plague</li>
-                <li>Rabies</li>
-                <li><a href="https://www.cdc.gov/rodents/diseases/direct.html">More</a></li>
-            </ul>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Black</li>
+                    <li>16 in. size, long and oval in shape</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">DISEASES</h3>
+                <ul>
+                    <li>Hantavirus Pulmonary Syndrome (HPS)</li>
+                    <li>Rat-bite fever</li>
+                    <li>Bubonic Plague</li>
+                    <li>Septicemic plague</li>
+                    <li>Pneumonic plague</li>
+                    <li>Rabies</li>
+                    <li><a href="https://www.cdc.gov/rodents/diseases/direct.html">More</a></li>
+                </ul>
+            </div>
+            <!--div class="col">
+                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
+                <ul>
+                    <li>Salmonellosis</li>
+                    <li>Typhoid Fever</li>
+                    <li>Cholera</li>
+                    <li>Dysentery</li>
+                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+                </ul>
+            </div-->
         </div>
 
     </div>
