--- a/spiders.html
+++ b/spiders.html
@@ -116,35 +116,41 @@
                 Their bites resemble to long fang marks and quickly lead to severe pain, burning, swelling, and redness at the bite. If bitten do not panic, wash bite with soap and water
                 to prevent infection and take the victim to a hospital if they are a child or if muscle cramp develop.
             </p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>
-                    Female: 1.5 in. long
-                    <ul>
-                        <li>Shiny, black globe abdomen</li>
-                        <li>Bigger body, smaller legs</li>
-                        <li>Red or orange hourglass on underside</li>
-                        <li>VENOMOUS</li>
-                    </ul>
-                </li>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>
+                        Female: 1.5 in. long
+                        <ul>
+                            <li>Shiny, black globe abdomen</li>
+                            <li>Bigger body, smaller legs</li>
+                            <li>Red or orange hourglass on underside</li>
+                            <li>VENOMOUS</li>
+                        </ul>
+                    </li>
 
-                <li>Male: 0.75 in. long
-                    <ul>
-                        <li>Shiny, black globe abdomen</li>
-                        <li>Smaller body, longer legs</li>
-                        <li>Yellow and red bands and spots on back</li>
-                    </ul>
-                </li>
-            </ul>
-            <h3 class="my-3">Symptoms</h3>
-            <ul>
-                <li>Nausea or vomiting</li>
-                <li>Difficulty breathing</li>
-                <li>Severe abdominal pain</li>
-                <li>Excessive sweating</li>
-                <li>Rash</li>
-                <li><a href="https://www.cdc.gov/niosh/topics/spiders/symptoms.htmll">More</a></li>
-            </ul>
+                    <li>Male: 0.75 in. long
+                        <ul>
+                            <li>Shiny, black globe abdomen</li>
+                            <li>Smaller body, longer legs</li>
+                            <li>Yellow and red bands and spots on back</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">SYMPTOMS</h3>
+                <ul>
+                    <li>Nausea or vomiting</li>
+                    <li>Difficulty breathing</li>
+                    <li>Severe abdominal pain</li>
+                    <li>Excessive sweating</li>
+                    <li>Rash</li>
+                    <li><a href="https://www.cdc.gov/niosh/topics/spiders/symptoms.htmll">More</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 
@@ -170,26 +176,32 @@
                 chills, dizziness, fever, rash, or vomiting they should seek emergency medical attention immediately. This is more common in children
                 and the elderly.
             </p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>Yellowish tan with violin pattern on back</li>
-                <li>0.25 in. long body, 1 in. long legs</li>
-                <li>VENOMOUS</li>
-            </ul>
-            <h3 class="my-3">Symptoms</h3>
-            <ul>
-                <li>Dry, bluish, central blister with ring of redness around pale center.</li>
-                <li>Severe
-                    <ul>
-                        <li>Chills</li>
-                        <li>Dizziness</li>
-                        <li>Fever</li>
-                        <li>Rash</li>
-                        <li>Vomiting</li>
-                    </ul>
-                </li>
-                <li><a href="https://www.cdc.gov/niosh/topics/spiders/types.html">More</a></li>
-            </ul>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Yellowish tan with violin pattern on back</li>
+                    <li>0.25 in. long body, 1 in. long legs</li>
+                    <li>VENOMOUS</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">SYMPTOMS</h3>
+                <ul>
+                    <li>Dry, bluish, central blister with ring of redness around pale center.</li>
+                    <li>Severe
+                        <ul>
+                            <li>Chills</li>
+                            <li>Dizziness</li>
+                            <li>Fever</li>
+                            <li>Rash</li>
+                            <li>Vomiting</li>
+                        </ul>
+                    </li>
+                    <li><a href="https://www.cdc.gov/niosh/topics/spiders/types.html">More</a></li>
+                </ul>
+            </div>
         </div>
 
     </div>
@@ -215,26 +227,32 @@
                 Their bite is poisonous, painful, and resembles a red, itchy bump similar to most bug bites that usually goes away after three days.
                 Some victims experience allergic reactions with symptoms including a red line extending from the bite, the bump growing, swelling in face,
                 difficulty breathing, dizziness or unconsciousness. Seek immediate medical attention if you experience such systems.</p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>Dark brown and gray with hairy body</li>
-                <li>0.5 in. size, segmented and oval in shape</li>
-                <li>NON-VENOMOUS</li>
-            </ul>
-            <h3 class="my-3">Symptoms</h3>
-            <ul>
-                <li>Red, itchy bump.</li>
-                <li>Allergic Reaction
-                    <ul>
-                        <li>Red line extending from bite (blood poisoning)</li>
-                        <li>Bump growth</li>
-                        <li>Swelling in face</li>
-                        <li>Difficulty breathing</li>
-                        <li>Dizziness</li>
-                    </ul>
-                </li>
-                <li><a href="https://www.medicalnewstoday.com/articles/324058#identification">More</a></li>
-            </ul>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Dark brown and gray with hairy body</li>
+                    <li>0.5 in. size, segmented and oval in shape</li>
+                    <li>NON-VENOMOUS</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3 class="my-3">SYMPTOMS</h3>
+                <ul>
+                    <li>Red, itchy bump.</li>
+                    <li>Allergic Reaction
+                        <ul>
+                            <li>Red line extending from bite (blood poisoning)</li>
+                            <li>Bump growth</li>
+                            <li>Swelling in face</li>
+                            <li>Difficulty breathing</li>
+                            <li>Dizziness</li>
+                        </ul>
+                    </li>
+                    <li><a href="https://www.medicalnewstoday.com/articles/324058#identification">More</a></li>
+                </ul>
+            </div>
         </div>
 
     </div>
