--- a/termites.html
+++ b/termites.html
@@ -107,26 +107,17 @@
                 grow the tunnels of their colony while using wood as food to reproduce. An average colony of 60,000 termites can consume an entire
                 2x4 plank of wood in 6 months. Most termite infestations go unnoticed for months, if not years, during which termites are free to
                 eat away at the home's most important structural components.</p>
-            <h3 class="my-3">Characteristics</h3>
-            <ul>
-                <li>Look like white ants with a head and cigar-shaped body</li>
-                <li>Two sets of wings of equal length</li>
-                <li>Prefer damp, humid areas</li>
-                <li>Infestations begin during the spring</li>
-            </ul>
-            <!--h3 class="my-3">Diseases</h3>
-            <ul>
-                <li>West Nile Virus</li>
-                <li>Zika Virus</li>
-                <li>Malaria</li>
-                <li>Chikungunya Virus</li>
-                <li>Dengue Virus</li>
-                <li>Eastern Equine Encephalitis Virus</li>
-                <li>Japanese Encephalitis Virus</li>
-                <li>La Crosse Encephalitis</li>
-                <li>St. Louis Encephalitis</li>
-                <li>Yellow Fever</li>
-            </ul-->
+        </div>
+        <div class="row">
+            <div class="col">
+                <h3 class="my-3">CHARACTERISTICS</h3>
+                <ul>
+                    <li>Look like white ants with a head and cigar-shaped body</li>
+                    <li>Two sets of wings of equal length</li>
+                    <li>Prefer damp, humid areas</li>
+                    <li>Infestations begin during the spring</li>
+                </ul>
+            </div>
         </div>
 
     </div>
